# ai-agent-practice

./: .env  main.py  pyproject.toml  scholarships.json
functions/: get_files_info.py
